@@ -1,5 +1,10 @@
 2024-03-03  Sam Varshavchik  <mrsam@courier-mta.com>
 
+	* inittab.C: Improve converted unit descriptions
+
+	* proc_container_group.C: fix duplicated output to due unflushed
+	buffer, oops.
+
 	* Fix double invocation of rc.local_shutdown.
 
 2024-03-02  Sam Varshavchik  <mrsam@courier-mta.com>
